Changelog:
Versions without changelogs probably had very small misc fixes, like tweaks to the source code

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 1.5.01-dev
 + Added new feature to Herbalism. Instantly-regrown crops are protected from being broken for 1 second
 + Added option to config.yml to show the /mcstats scoreboard automatically after logging in
 + Added option to config.yml for Alchemy. Skills.Alchemy.Prevent_Hopper_Transfer_Bottles
 + Added support for `MATERIAL|data` format in treasures.yml
 + Added API to experience events to get XP gain reason
 = Fixed bug where the Updater was running on the main thread.
 = Fixed bug when players would use /ptp without being in a party
 = Fixed bug where player didn't have a mcMMOPlayer object in AsyncPlayerChatEvent
 = Fixed bug where dodge would check the wrong player skill level
 = Fixed bug which causes /party teleport to stop working
 ! Vanished players no longer get hit by AoE effects
 ! Changed Alchemy config option 'Prevent_Hopper_Transfer' renamed to 'Prevent_Hopper_Transfer_Ingredients'

Version 1.5.00
 + Added Podzol & Red Sand to Excavation
 + Added Hardened Clay, Stained Clay, and Packed Ice to Mining blocks
 + Added Acacia and Dark Oak to Woodcutting blocks
 + Added Salmon, Clownfish, and Pufferfish to Fishing XP
 + Added new flowers and grasses to Herbalism XP
 + Added option to config.yml which allows players to always catch fish, even when a treasure is found
 + Added option to config.yml to override vanilla Minecraft treasures
 ! Fishing XP now depends on the type of fish.
 ! Woodcutting XP in experience.yml and Woodcutting double drops in config.yml now use the tree species names. Oak is now Generic, and Spruce is now Redwood.
 ! Red_Rose was replaced by Poppy, and so the key in experience.yml has been updated accordingly.
 - Removed deprecated permission nodes
 - Removed "Treasure found!" message

Version 1.4.08